0031513: Data Exchange - FSD_Base64Decoder::Decode() returns buffer with wrong length